fix(property): minor fix

--- a/projects/editor/src/lib/property/boolean-property/boolean-property.component.html
+++ b/projects/editor/src/lib/property/boolean-property/boolean-property.component.html
@@ -25,7 +25,7 @@
 <ng-template #simplifiedView>
     <div class="simplified-wrapper">
         <span
-            *ngIf="isOverrideMode && isOverridden"
+            *ngIf="isOverrideMode && !isInArray"
             class="override-indicator"
             [class.overriden]="isOverridden"
         ></span>
