feat(tree-item): use mat expansion animation

--- a/projects/editor/src/lib/tree-item/tree-item.component.html
+++ b/projects/editor/src/lib/tree-item/tree-item.component.html
@@ -39,7 +39,8 @@
 </div>
 <div
     *ngIf="isExpandable"
-    [class.hidden]="!isExpanded"
+    class="children-container"
+    [@bodyExpansion]="expansionState"
 >
     <ng-content select="[childrenContent]"></ng-content>
 </div>
