--- a/projects/editor/src/lib/property/object-array-properties/array-property.component.scss
+++ b/projects/editor/src/lib/property/object-array-properties/array-property.component.scss
@@ -1,20 +1,27 @@
 :host {
     display: block;
 }
+.simplified-view {
+    display: flex;
+    column-gap: 8px;
+}
+
+.simplified-panel {
+    flex-grow: 1;
+}
 
 .simplified-header {
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    margin-right: 16px;
     padding: 8px 0;
     cursor: pointer;
 }
 
 .simplified-header-left {
-    display: inline-flex;
-    align-items: center;
-    column-gap: 8px;
-    min-height: 32px;
+    flex-grow: 1;
 }
 .simplified-header-right {
     display: inline-flex;
@@ -41,15 +48,11 @@
     display: block;
 }
 
-.mat-expansion-panel {
-    border: 1px solid rgba(0, 0, 0, 0.12);
-    box-shadow: none !important;
-}
-
 .simple-remove-btn {
     margin-right: 16px;
 }
 
 .override-indicator {
+    margin-top: 8px;
     height: 32px;
 }
